// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/delete_post_modal should match snapshot for delete_post_modal with 0 comments 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={false}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      <FormattedMessage
        defaultMessage="Confirm {term} Delete"
        id="delete_post.confirm"
        values={
          Object {
            "term": <FormattedMessage
              defaultMessage="Post"
              id="delete_post.post"
              values={Object {}}
            />,
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <FormattedMessage
      defaultMessage="Are you sure you want to delete this {term}?"
      id="delete_post.question"
      values={
        Object {
          "term": <FormattedMessage
            defaultMessage="Post"
            id="delete_post.post"
            values={Object {}}
          />,
        }
      }
    />
    <br />
    <br />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="delete_post.cancel"
        values={Object {}}
      />
    </button>
    <button
      autoFocus={true}
      className="btn btn-danger"
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Delete"
        id="delete_post.del"
        values={Object {}}
      />
    </button>
  </ModalFooter>
</Modal>
`;

exports[`components/delete_post_modal should match snapshot for delete_post_modal with 1 comment 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={false}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onExited={[MockFunction]}
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      <FormattedMessage
        defaultMessage="Confirm {term} Delete"
        id="delete_post.confirm"
        values={
          Object {
            "term": <FormattedMessage
              defaultMessage="Post"
              id="delete_post.post"
              values={Object {}}
            />,
          }
        }
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <FormattedMessage
      defaultMessage="Are you sure you want to delete this {term}?"
      id="delete_post.question"
      values={
        Object {
          "term": <FormattedMessage
            defaultMessage="Post"
            id="delete_post.post"
            values={Object {}}
          />,
        }
      }
    />
    <br />
    <br />
    <FormattedMessage
      defaultMessage="This post has {count, number} {count, plural, one {comment} other {comments}} on it."
      id="delete_post.warning"
      values={
        Object {
          "count": 1,
        }
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="delete_post.cancel"
        values={Object {}}
      />
    </button>
    <button
      autoFocus={true}
      className="btn btn-danger"
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        defaultMessage="Delete"
        id="delete_post.del"
        values={Object {}}
      />
    </button>
  </ModalFooter>
</Modal>
`;
